2006086
 - (dtucker) [defines.h] With the includes.h changes we no longer get the
   name clash on "YES" so we can remove the workaround for it.

20060805
 - (djm) OpenBSD CVS Sync
   - stevesk@cvs.openbsd.org 2006/07/24 13:58:22
     [sshconnect.c]
     disable tunnel forwarding when no strict host key checking
     and key changed; ok djm@ markus@ dtucker@
   - stevesk@cvs.openbsd.org 2006/07/25 02:01:34
     [scard.c]
     need #include <string.h>
   - stevesk@cvs.openbsd.org 2006/07/25 02:59:21
     [channels.c clientloop.c packet.c scp.c serverloop.c sftp-client.c]
     [sftp-server.c ssh-agent.c ssh-keyscan.c sshconnect.c sshd.c]
     move #include <sys/time.h> out of includes.h
   - stevesk@cvs.openbsd.org 2006/07/26 02:35:17
     [atomicio.c auth.c dh.c authfile.c buffer.c clientloop.c kex.c]
     [groupaccess.c gss-genr.c kexgexs.c misc.c monitor.c monitor_mm.c]
     [packet.c scp.c serverloop.c session.c sftp-client.c sftp-common.c]
     [sftp-server.c sftp.c ssh-add.c ssh-agent.c ssh-keygen.c sshlogin.c]
     [uidswap.c xmalloc.c]
     move #include <sys/param.h> out of includes.h
   - stevesk@cvs.openbsd.org 2006/07/26 13:57:17
     [authfd.c authfile.c dh.c canohost.c channels.c clientloop.c compat.c]
     [hostfile.c kex.c log.c misc.c moduli.c monitor.c packet.c readpass.c]
     [scp.c servconf.c session.c sftp-server.c sftp.c ssh-add.c ssh-agent.c]
     [ssh-keygen.c ssh-keyscan.c ssh-keysign.c ssh.c sshconnect.c]
     [sshconnect1.c sshd.c xmalloc.c]
     move #include <stdlib.h> out of includes.h
   - jmc@cvs.openbsd.org 2006/07/27 08:00:50
     [ssh_config.5]
     avoid confusing wording in HashKnownHosts:
     originally spotted by alan amesbury;
     ok deraadt
   - jmc@cvs.openbsd.org 2006/07/27 08:00:50
     [ssh_config.5]
     avoid confusing wording in HashKnownHosts:
     originally spotted by alan amesbury;
     ok deraadt
   - dtucker@cvs.openbsd.org 2006/08/01 11:34:36
     [sshconnect.c]