@@ -37,6 +37,8 @@
 
 #include <sys/types.h>
 
+#include <stdlib.h>
+
 #ifdef HAVE_SYS_STAT_H
 # include <sys/stat.h>
 #endif
