@@ -37,10 +37,12 @@
 
 #include <sys/types.h>
 #include <sys/stat.h>
+
 #include <dirent.h>
 #include <ctype.h>
 #include <errno.h>
 #include <pwd.h>
+#include <stdlib.h>
 #include <string.h>
 #include <unistd.h>
 
